[package]
name = "panic-rtt-target"
description = "Logs panic messages over RTT using rtt-target"
version = "0.1.2"
edition = "2018"
readme = "README.md"
keywords = ["no-std", "embedded", "debugging", "rtt"]
license = "MIT"
authors = ["Matti Virkkunen <mvirkkunen@gmail.com>"]
repository = "https://github.com/mvirkkunen/rtt-target"

[dependencies]
rtt-target = { git = "https://github.com/9names/rtt-target", branch="riscv_atomic_polyfill" }


# Platform specific stuff
cortex-m = { version = "0.7.1", optional = true }
riscv = { version = "0.6.0", optional = true }
atomic-polyfill = { git = "https://github.com/embassy-rs/atomic-polyfill"}

[package.metadata.docs.rs]
features = ["cortex-m", "riscv"]
